<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profileVM" type="com.foo.app.modules.profile.data.viewmodel.ProfileVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearProfile"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylebluegray_100">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackmusic"
            android:layout_height="@dimen/_296pxv" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearColumnmusic"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegreen_401">
                <LinearLayout android:gravity="end"
                    android:id="@+id/linearIOSStatusBar"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageMusic"
                        android:layout_height="@dimen/_11pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_width="@dimen/_28pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_music"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_music"/>
                    <ImageView android:id="@+id/imageRightSide"
                        android:layout_height="@dimen/_11pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_216pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_66pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_rightside"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_rightside"/>
                </LinearLayout>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearHeader"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_158pxv"
                    android:layout_marginEnd="@dimen/_19pxh"
                    android:layout_marginStart="@dimen/_19pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageButton
                        android:background="@drawable/rectangle_bg_bluegray_800_radius_17"
                        android:id="@+id/btnVector"
                        android:layout_height="@dimen/_34pxh"
                        android:layout_width="@dimen/_34pxh"
                        android:paddingHorizontal="@dimen/_10pxh"
                        android:paddingVertical="@dimen/_10pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_vector" tools:ignore="ContentDescription"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtCnhn"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_marginStart="@dimen/_78pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.74"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{profileVM.profileModel.txtCnhn}"
                        style="@style/txtInterbold24_1" tools:text="@string/lbl_c_nh_n"/>
                </LinearLayout>
            </LinearLayout>
            <ImageView android:id="@+id/imageEllipseSeven"
                android:layout_gravity="bottom|center"
                android:layout_height="@dimen/_158pxh"
                android:layout_marginEnd="@dimen/_101pxh"
                android:layout_marginStart="@dimen/_101pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="@dimen/_158pxh"
                android:scaleType="centerCrop" circular="@{true}"
                imageRes="@{@drawable/img_ellipse7_158x158}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse7_158x158"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtVKhnhHuyn"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{profileVM.profileModel.txtVKhnhHuyn}"
            style="@style/txtIntersemibold32" tools:text="@string/lbl_v_kh_nh_huy_n"/>
        <LinearLayout android:id="@+id/linearRowtn"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylecornerRadius_8">
            <TextView android:ellipsize="end" android:id="@+id/txtTn"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5pxv"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{profileVM.profileModel.txtTn}"
                style="@style/txtInterlight14" tools:text="@string/lbl_t_n2"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_8"
                android:ellipsize="end"
                android:hint="@string/lbl_v_kh_nh_huy_n2"
                android:id="@+id/etControlsText"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_107pxh"
                android:layout_weight="0.86" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@={profileVM.profileModel.etControlsTextValue}"
                android:textColorHint="@color/black_906"
                style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowtnngnhp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylecornerRadius_8">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTnngnhp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4pxv"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_weight="0.38" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{profileVM.profileModel.txtTnngnhp}"
                style="@style/txtInterlight14" tools:text="@string/lbl_t_n_ng_nh_p"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_8"
                android:ellipsize="end"
                android:hint="@string/lbl_v_kh_nh_huy_n2"
                android:id="@+id/etControlsTextOne"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_weight="0.62" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@={profileVM.profileModel.etControlsTextOneValue}"
                android:textColorHint="@color/black_906"
                style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowmtkhu"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylecornerRadius_8">
            <TextView android:ellipsize="end" android:id="@+id/txtMtkhu"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5pxv"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_weight="0.28" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{profileVM.profileModel.txtMtkhu}"
                style="@style/txtInterlight14" tools:text="@string/lbl_m_t_kh_u2"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_8"
                android:drawableEnd="@drawable/img_car"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end" android:hint="@string/lbl"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_71pxh"
                android:layout_weight="0.72" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_8pxv"
                android:paddingEnd="@dimen/_11pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_4pxv"
                android:singleLine="true"
                android:text="@={profileVM.profileModel.etPasswordValue}"
                android:textColorHint="@color/black_906"
                style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowemail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylecornerRadius_8">
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5pxv"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_weight="0.19" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{profileVM.profileModel.txtEmail}"
                style="@style/txtInterlight14" tools:text="@string/lbl_email2"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_8"
                android:ellipsize="end"
                android:hint="@string/lbl_vkh_gmail_3"
                android:id="@+id/etControlsTextTwo"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_96pxh"
                android:layout_weight="0.81" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_5pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:text="@={profileVM.profileModel.etControlsTextTwoValue}"
                android:textColorHint="@color/black_906"
                style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowimthng"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtImthng"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4pxv"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_weight="0.35" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{profileVM.profileModel.txtImthng}"
                style="@style/txtInterlight14" tools:text="@string/lbl_i_m_th_ng"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_8"
                android:drawableEnd="@drawable/img_icon_gray_801"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end" android:hint="@string/lbl_3600"
                android:id="@+id/etZipcode" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_47pxh"
                android:layout_weight="0.65" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_11pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@={profileVM.profileModel.etZipcodeValue}"
                android:textColorHint="@color/black_906"
                style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowhng"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_135pxv"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylecornerRadius_8">
            <TextView android:ellipsize="end" android:id="@+id/txtHng"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4pxv"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_weight="0.17" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{profileVM.profileModel.txtHng}"
                style="@style/txtInterlight14" tools:text="@string/lbl_h_ng"/>
            <LinearLayout android:id="@+id/linearRowtext"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_100pxh"
                android:layout_weight="0.83" android:layout_width="0dp"
                android:orientation="horizontal" style="@style/groupStylewhite_6">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtText"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_weight="0.48"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtText}"
                    style="@style/txtInterregular12" tools:text="@string/lbl_b_c"/>
                <ImageView android:id="@+id/imageImageThree"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginEnd="@dimen/_6pxh"
                    android:layout_marginStart="@dimen/_98pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_23pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_image3"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image3"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
