<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="quizzOneVM" type="com.foo.app.modules.quizzone.data.viewmodel.QuizzOneVM"/>
    </data>
    <LinearLayout android:gravity="end" android:id="@+id/linearQuizzOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylebluegray_100">
        <LinearLayout android:gravity="end"
            android:id="@+id/linearIOSStatusBar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageMusic"
                android:layout_height="@dimen/_11pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_width="@dimen/_28pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_music"
                tools:ignore="ContentDescription" tools:src="@drawable/img_music"/>
            <ImageView android:id="@+id/imageRightSide"
                android:layout_height="@dimen/_11pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_216pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_66pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_rightside"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rightside"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearHeader"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_152pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageArrowleft"
                android:layout_height="@dimen/_15pxh"
                android:layout_marginBottom="@dimen/_7pxv"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="@dimen/_9pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
            <TextView android:ellipsize="end" android:id="@+id/txtQuiz"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_118pxh"
                android:layout_weight="0.85" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{quizzOneVM.quizzOneModel.txtQuiz}"
                style="@style/txtInterbold24" tools:text="@string/lbl_quiz"/>
        </LinearLayout>
        <ImageView android:id="@+id/imageImageTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_200pxh"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="@dimen/_320pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_10pxh}"
            imageRes="@{@drawable/img_image2}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image2"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnTnaimNyLG"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_23pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_23pxv" android:singleLine="true"
            android:text="@string/msg_t_n_a_i_m_n"
            android:textAllCaps="false" style="@style/btnSolidRounded_6" tools:text="@string/msg_t_n_a_i_m_n"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumniTrungMn"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btniTrungMn"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_i_trung_m_n"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_7" tools:text="@string/lbl_i_trung_m_n"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnVnHiuMn"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_v_n_hi_u_m_n"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_7" tools:text="@string/lbl_v_n_hi_u_m_n"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnKhuVnCc"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_khu_v_n_c_c"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_7" tools:text="@string/lbl_khu_v_n_c_c"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnnKhiThnh"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_n_kh_i_th_nh"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_7" tools:text="@string/lbl_n_kh_i_th_nh"/>
        </LinearLayout>
    </LinearLayout>
</layout>
